--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 Learn to make commits  DONE
 
-Learn about ignoring files  DONE 
+Learn about ignoring files  DONE
+
+HOW to create branch IN PROGRESS
